--- a/app/src/main/res/layout/activity_logged_out.xml
+++ b/app/src/main/res/layout/activity_logged_out.xml
@@ -35,7 +35,7 @@
         android:id="@+id/imageView"
         android:layout_above="@+id/LogOutToIn"
         android:layout_marginBottom="84dp"
-        android:src="@mipmap/PopCorn"
+        android:src="@mipmap/popcorn"
         android:layout_alignParentTop="true"
         android:layout_alignLeft="@+id/LogOutToIn"
         android:layout_alignStart="@+id/LogOutToIn"
