--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,9 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="ivLogo_height">300dp</dimen>
+    <dimen name="button_height">100dp</dimen>
+    <dimen name="text_height">50dp</dimen>
+    <dimen name="text_font_size">25sp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
