--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,34 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context="javathehutt.buzz_movieselector.loginActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <android.support.design.widget.AppBarLayout
+    <Space
+        android:layout_width="fill_parent"
+        android:layout_height="50px" />
+
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:layout_height="@dimen/button_height">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/text_height"
+            android:text="@string/username"
+            android:id="@+id/username"
+            android:textColor="#000000"
+            android:textSize="@dimen/text_font_size" />
+
+        <EditText
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/etUsername"
+            android:layout_gravity="left|center_horizontal" />
+    </LinearLayout>
 
-    </android.support.design.widget.AppBarLayout>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/button_height">
 
-    <include layout="@layout/content_login" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/text_height"
+            android:text="@string/password"
+            android:id="@+id/password"
+            android:textColor="#000000"
+            android:textSize="@dimen/text_font_size" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_dialog_email" />
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/etPassword"
+            android:editable="false"
+            android:elegantTextHeight="false"
+            android:inputType="textPassword"
+            android:layout_gravity="left" />
+    </LinearLayout>
 
-</android.support.design.widget.CoordinatorLayout>
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="@dimen/button_height"
+        android:text="@string/login_button"
+        android:allowUndo="false"
+        android:id="@+id/userLoginButton"
+        android:longClickable="false" />
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="@dimen/button_height"
+        android:text="@string/cancle_button"
+        android:id="@+id/cancelButton" />
+
+</LinearLayout>
