--- a/app/src/main/res/layout/activity_logged_out.xml
+++ b/app/src/main/res/layout/activity_logged_out.xml
@@ -14,10 +14,14 @@
         android:layout_height="wrap_content"
         android:text="Log In Again"
         android:id="@+id/LogOutToIn"
+        android:onClick="returnLogIn"
         android:minWidth="200dp"
+        android:minHeight="100dp"
         android:layout_above="@+id/LogOutToHome"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="59dp" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <Button
         android:layout_width="wrap_content"
@@ -29,26 +33,29 @@
         android:layout_alignParentBottom="true"
         android:layout_alignLeft="@+id/LogOutToIn"
         android:layout_alignStart="@+id/LogOutToIn"
-        android:layout_marginBottom="39dp" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView"
-        android:layout_alignParentTop="true"
-        android:src="@mipmap/popcorn"
-        android:layout_alignLeft="@+id/LogOutToIn"
-        android:layout_alignStart="@+id/LogOutToIn"
+        android:layout_marginBottom="39dp"
         android:layout_alignRight="@+id/LogOutToIn"
         android:layout_alignEnd="@+id/LogOutToIn"
-        android:layout_above="@+id/LogOutToIn" />
+        android:minHeight="100dp" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/editText"
+        android:text="You have logged out"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:text="You have logged out" />
+        android:layout_centerHorizontal="true" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView"
+        android:layout_alignLeft="@+id/editText"
+        android:layout_alignStart="@+id/editText"
+        android:src="@mipmap/popcorn"
+        android:layout_below="@+id/editText"
+        android:layout_alignRight="@+id/editText"
+        android:layout_alignEnd="@+id/editText"
+        android:layout_above="@+id/LogOutToIn" />
 
 </RelativeLayout>
