replaced textbox with actual text... oops

--- a/app/src/main/res/layout/activity_logged_out.xml
+++ b/app/src/main/res/layout/activity_logged_out.xml
@@ -38,24 +38,25 @@
         android:layout_alignEnd="@+id/LogOutToIn"
         android:minHeight="100dp" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText"
-        android:text="You have logged out"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
-        android:layout_alignLeft="@+id/editText"
-        android:layout_alignStart="@+id/editText"
         android:src="@mipmap/popcorn"
-        android:layout_below="@+id/editText"
-        android:layout_alignRight="@+id/editText"
-        android:layout_alignEnd="@+id/editText"
-        android:layout_above="@+id/LogOutToIn" />
+        android:layout_above="@+id/LogOutToIn"
+        android:layout_below="@+id/textView"
+        android:layout_alignRight="@+id/LogOutToIn"
+        android:layout_alignEnd="@+id/LogOutToIn"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="You Have Logged Out"
+        android:id="@+id/textView"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
