--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,22 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <Space
-        android:layout_width="fill_parent"
-        android:layout_height="50px" />
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="javathehutt.buzz_movieselector.loginActivity">
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/button_height">
+        android:layout_height="50dp"
+        android:id="@+id/linearLayout"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="@dimen/text_height"
             android:text="@string/username"
-            android:id="@+id/username"
+            android:id="@+id/textView2"
             android:textColor="#000000"
             android:textSize="@dimen/text_font_size" />
 
@@ -29,16 +35,39 @@
             android:layout_gravity="left|center_horizontal" />
     </LinearLayout>
 
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="@dimen/button_height"
+        android:text="@string/login_button"
+        android:id="@+id/userLoginButton"
+        android:longClickable="false"
+        android:layout_below="@+id/linearLayout2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="@dimen/button_height"
+        android:text="@string/cancle_button"
+        android:id="@+id/cancelButton"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/userLoginButton"
+        android:layout_alignParentLeft="true" />
+
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/button_height">
+        android:layout_height="50dp"
+        android:layout_below="@+id/linearLayout"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/linearLayout2">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="@dimen/text_height"
             android:text="@string/password"
-            android:id="@+id/password"
+            android:id="@+id/textView4"
             android:textColor="#000000"
             android:textSize="@dimen/text_font_size" />
 
@@ -51,19 +80,4 @@
             android:inputType="textPassword"
             android:layout_gravity="left" />
     </LinearLayout>
-
-    <Button
-        android:layout_width="fill_parent"
-        android:layout_height="@dimen/button_height"
-        android:text="@string/login_button"
-        android:allowUndo="false"
-        android:id="@+id/userLoginButton"
-        android:longClickable="false" />
-
-    <Button
-        android:layout_width="fill_parent"
-        android:layout_height="@dimen/button_height"
-        android:text="@string/cancle_button"
-        android:id="@+id/cancelButton" />
-
-</LinearLayout>
+</RelativeLayout>
