--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -10,12 +10,23 @@
     tools:context="javathehutt.buzz_movieselector.MainMenu">
 
     <Button
+        android:layout_width="fill_parent"
+        android:layout_height="@dimen/button_height"
+        android:text="@string/profileButton"
+        android:id="@+id/profileButton"
+        android:longClickable="false"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:onClick="openProfile" />
+
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Log Out"
+        android:text="@string/logOutButton"
         android:id="@+id/button"
         android:onClick="logOut"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="106dp" />
+
 </RelativeLayout>
