--- a/app/src/main/res/layout/activity_logged_out.xml
+++ b/app/src/main/res/layout/activity_logged_out.xml
@@ -41,7 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView"
-        android:src="@mipmap/popcorn"
+        android:src="@drawable/popcorn"
         android:layout_above="@+id/LogOutToIn"
         android:layout_below="@+id/textView"
         android:layout_alignParentLeft="true"
