--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -43,7 +43,8 @@
         android:longClickable="false"
         android:layout_below="@+id/linearLayout2"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:onClick="userLoginButtonClick" />
 
     <Button
         android:layout_width="fill_parent"
@@ -52,7 +53,8 @@
         android:id="@+id/cancelButton"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/userLoginButton"
-        android:layout_alignParentLeft="true" />
+        android:layout_alignParentLeft="true"
+        android:onClick="cancelButtonClick" />
 
     <LinearLayout
         android:orientation="horizontal"
