--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,7 +49,7 @@
     <Button
         android:layout_width="fill_parent"
         android:layout_height="@dimen/button_height"
-        android:text="@string/cancle_button"
+        android:text="@string/cancel_button"
         android:id="@+id/cancelButton"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/userLoginButton"
