--- a/app/src/main/res/layout/activity_logged_out.xml
+++ b/app/src/main/res/layout/activity_logged_out.xml
@@ -12,7 +12,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Log In Again"
+        android:text="@string/log_in_again"
         android:id="@+id/LogOutToIn"
         android:onClick="returnLogIn"
         android:minWidth="200dp"
@@ -26,7 +26,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Home"
+        android:text="@string/home"
         android:id="@+id/LogOutToHome"
         android:minWidth="200dp"
         android:onClick="returnHome"
@@ -53,7 +53,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="You Have Logged Out"
+        android:text="@string/title_activity_log_out"
         android:id="@+id/textView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
