--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -22,7 +22,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/logOutButton"
+        android:text="@string/log_out_button"
         android:id="@+id/button"
         android:onClick="logOutClick"
         android:layout_alignParentBottom="true"
