--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    tools:context=".ProfileActivity">
 
     <TextView
         android:layout_width="wrap_content"
@@ -19,6 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
+        android:singleLine="true"
         android:text=""
         android:id="@+id/realNameEdit"
         android:layout_alignBaseline="@+id/realName"
@@ -31,23 +34,69 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/username"
-        android:textSize="25sp"
         android:id="@+id/usernameProfile"
         android:layout_below="@+id/realName"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="15dp" />
+        android:layout_marginBottom="10dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/location"
+        android:id="@+id/locationProfile"
+        android:layout_below="@+id/usernameProfile"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:singleLine="true"
         android:text=""
-        android:id="@+id/usernameProfileEdit"
-        android:layout_alignBaseline="@+id/usernameProfile"
-        android:layout_alignBottom="@+id/usernameProfile"
-        android:layout_toRightOf="@+id/usernameProfile"
-        android:layout_toEndOf="@+id/usernameProfile" />
+        android:id="@+id/locationProfileEdit"
+        android:layout_toRightOf="@+id/locationProfile"
+        android:layout_toEndOf="@+id/locationProfile"
+        android:layout_alignBaseline="@+id/locationProfile" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/favoriteGenre"
+        android:id="@+id/genreProfile"
+        android:layout_alignBaseline="@+id/genreProfileEdit"
+        android:layout_alignBottom="@+id/genreProfileEdit"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:singleLine="true"
+        android:text=""
+        android:id="@+id/genreProfileEdit"
+        android:layout_below="@+id/locationProfileEdit"
+        android:layout_toRightOf="@+id/genreProfile"
+        android:layout_toEndOf="@+id/genreProfile" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/updateProfile"
+        android:id="@+id/updateProfile"
+        android:layout_below="@+id/genreProfile"
+        android:layout_centerHorizontal="true"
+        android:onClick="updateProfileClick" />
 </RelativeLayout>
