--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,6 +4,13 @@
     android:layout_width="match_parent" android:layout_height="match_parent"
     tools:context=".ProfileActivity">
 
+    <LinearLayout
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:id="@+id/focusHolder"
+        android:layout_width="0px"
+        android:layout_height="0px"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -21,11 +28,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
+        android:inputType="textCapSentences"
         android:singleLine="true"
         android:text=""
         android:id="@+id/realNameEdit"
         android:layout_alignBaseline="@+id/realName"
-        android:layout_alignBottom="@+id/realName"
         android:layout_toRightOf="@+id/realName"
         android:layout_toEndOf="@+id/realName" />
 
@@ -59,6 +66,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
+        android:inputType="textCapSentences"
         android:singleLine="true"
         android:text=""
         android:id="@+id/locationProfileEdit"
@@ -72,8 +80,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/favoriteGenre"
         android:id="@+id/genreProfile"
-        android:layout_alignBaseline="@+id/genreProfileEdit"
-        android:layout_alignBottom="@+id/genreProfileEdit"
+        android:layout_below="@+id/locationProfile"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="15dp"
@@ -84,12 +91,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
+        android:inputType="textCapSentences"
         android:singleLine="true"
         android:text=""
         android:id="@+id/genreProfileEdit"
-        android:layout_below="@+id/locationProfileEdit"
         android:layout_toRightOf="@+id/genreProfile"
-        android:layout_toEndOf="@+id/genreProfile" />
+        android:layout_toEndOf="@+id/genreProfile"
+        android:layout_alignBaseline="@+id/genreProfile"/>
 
     <Button
         android:layout_width="wrap_content"
