--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/searchView"
         android:layout_alignParentTop="true"
-        android:onCLick="searchMovies"
+        android:onClick="searchMovies"
         android:layout_alignRight="@+id/profileButton"
         android:layout_alignEnd="@+id/profileButton"
         android:layout_alignParentLeft="true"
