--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".ProfileActivity">
 
     <LinearLayout
@@ -11,100 +16,103 @@
         android:layout_width="0px"
         android:layout_height="0px"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/realName"
-        android:id="@+id/realName"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="10dp"/>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/text_height"
+        android:id="@+id/nameLayout">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:inputType="textCapSentences"
-        android:singleLine="true"
-        android:text=""
-        android:id="@+id/realNameEdit"
-        android:layout_alignBaseline="@+id/realName"
-        android:layout_toRightOf="@+id/realName"
-        android:layout_toEndOf="@+id/realName" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/realName"
+            android:id="@+id/realName" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/username"
-        android:id="@+id/usernameProfile"
-        android:layout_below="@+id/realName"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp" />
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/text_height"
+            android:inputType="textCapSentences"
+            android:singleLine="true"
+            android:text=""
+            android:hint="@string/nameHint"
+            android:id="@+id/realNameEdit" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/location"
-        android:id="@+id/locationProfile"
-        android:layout_below="@+id/usernameProfile"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp" />
+    </LinearLayout>
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:inputType="textCapSentences"
-        android:singleLine="true"
-        android:text=""
-        android:id="@+id/locationProfileEdit"
-        android:layout_toRightOf="@+id/locationProfile"
-        android:layout_toEndOf="@+id/locationProfile"
-        android:layout_alignBaseline="@+id/locationProfile" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/text_height"
+        android:id="@+id/genreLayout"
+        android:layout_below="@id/nameLayout" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/favoriteGenre"
-        android:id="@+id/genreProfile"
-        android:layout_below="@+id/locationProfile"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/favoriteGenre"
+            android:id="@+id/genreProfile" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:inputType="textCapSentences"
-        android:singleLine="true"
-        android:text=""
-        android:id="@+id/genreProfileEdit"
-        android:layout_toRightOf="@+id/genreProfile"
-        android:layout_toEndOf="@+id/genreProfile"
-        android:layout_alignBaseline="@+id/genreProfile"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/text_height"
+            android:inputType="textCapSentences"
+            android:singleLine="true"
+            android:text=""
+            android:hint="@string/genreHint"
+            android:id="@+id/genreProfileEdit"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/updateProfile"
-        android:id="@+id/updateProfile"
-        android:layout_below="@+id/genreProfile"
-        android:layout_centerHorizontal="true"
-        android:onClick="updateProfileClick" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/text_height"
+        android:id="@+id/locationLayout"
+        android:layout_below="@id/genreLayout" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/text_height"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/location"
+            android:id="@+id/locationProfile" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/text_height"
+            android:inputType="textCapSentences"
+            android:singleLine="true"
+            android:text=""
+            android:hint="@string/locationHint"
+            android:id="@+id/locationProfileEdit" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/button_height"
+        android:layout_below="@id/locationLayout"
+        android:layout_marginTop="15dp" >
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight=".5"
+            android:layout_height="@dimen/button_height"
+            android:text="@string/title_activity_main_menu"
+            android:id="@+id/mainMenuButton"
+            android:onClick="mainMenuClick"/>
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight=".5"
+            android:layout_height="@dimen/button_height"
+            android:text="@string/updateProfile"
+            android:id="@+id/updateProfile"
+            android:onClick="updateProfileClick" />
+
+    </LinearLayout>
+
 </RelativeLayout>
