--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -94,8 +94,9 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="@dimen/button_height"
-        android:layout_below="@id/locationLayout"
-        android:layout_marginTop="15dp" >
+        android:layout_below="@+id/linearLayout"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <Button
             android:layout_width="0dp"
@@ -113,6 +114,32 @@
             android:id="@+id/updateProfile"
             android:onClick="updateProfileClick" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/text_height"
+        android:id="@+id/linearLayout"
+        android:layout_below="@+id/locationLayout"
+        android:layout_toRightOf="@+id/focusHolder"
+        android:layout_toEndOf="@+id/focusHolder">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/text_height"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Major:"
+            android:id="@+id/majorProfile" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/text_height"
+            android:inputType="textCapSentences"
+            android:singleLine="true"
+            android:text=""
+            android:hint="Enter Major here"
+            android:id="@+id/major" />
     </LinearLayout>
 
 </RelativeLayout>
