--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,7 +30,8 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/button_height"
         android:layout_below="@id/etPassword"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="20dp"
+        android:id="@+id/linearLayout">
 
         <Button
             android:layout_width="0dp"
@@ -48,6 +49,6 @@
             android:id="@+id/userLoginButton"
             android:longClickable="false"
             android:onClick="userLoginButtonClick" />
+    </LinearLayout>
 
-        </LinearLayout>
 </RelativeLayout>
