--- a/app/src/main/res/layout/activity_welcome_screen.xml
+++ b/app/src/main/res/layout/activity_welcome_screen.xml
@@ -30,10 +30,10 @@
         android:textAlignment="center"
         android:layout_gravity="center_horizontal"
         android:nestedScrollingEnabled="false"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:onClick="registerButtonClick"/>
+        android:onClick="registerButtonClick"
+        android:layout_above="@+id/login_button" />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -44,4 +44,14 @@
         android:layout_above="@+id/loginButton"
         android:layout_marginBottom="10dp"
         android:src="@drawable/icon" />
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/login_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
