--- a/app/src/main/res/layout/activity_welcome_screen.xml
+++ b/app/src/main/res/layout/activity_welcome_screen.xml
@@ -44,7 +44,7 @@
         android:layout_above="@+id/loginButton"
         android:layout_marginBottom="10dp"
         android:src="@drawable/icon" />
-    <com.facebook.login.widget.LoginButton
+    <fragment
         android:id="@+id/login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -53,5 +53,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:name="javathehutt.buzz_movieselector.FacebookFragment"
+        tools:layout="@layout/fragment_facebook" />
 </RelativeLayout>
