changed how profilt works to filter movies

--- a/app/src/main/res/layout/activity_movie_search.xml
+++ b/app/src/main/res/layout/activity_movie_search.xml
@@ -52,4 +52,13 @@
         android:layout_below="@+id/dVDReleases"
         android:layout_centerHorizontal="true" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Recommend For Me"
+        android:onClick="recommendClick"
+        android:id="@+id/Recommend"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
