Made MovieView scrollable

--- a/app/src/main/res/layout/activity_movie_view.xml
+++ b/app/src/main/res/layout/activity_movie_view.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/ratingBar"
-        android:layout_above="@+id/button1"
+        android:layout_below="@+id/MovieInfo"
         android:layout_centerHorizontal="true" />
     <Button
         android:id="@+id/button1"
@@ -21,7 +24,7 @@
         android:layout_height="wrap_content"
         android:text="Done"
         android:onClick="ratingButtonClick"
-        android:layout_above="@+id/button2"
+        android:layout_below="@+id/ratingBar"
         android:layout_alignLeft="@+id/ratingBar"
         android:layout_alignStart="@+id/ratingBar"
         android:layout_alignRight="@+id/ratingBar"
@@ -33,7 +36,7 @@
         android:text="Similar Movies"
         android:id="@+id/button2"
         android:onClick="similarMovies"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/button1"
         android:layout_alignLeft="@+id/button1"
         android:layout_alignStart="@+id/button1"
         android:layout_alignRight="@+id/button1"
@@ -59,3 +62,4 @@
         android:layout_marginTop="107dp" />
 
 </RelativeLayout>
+</ScrollView>
